--- a/music.html
+++ b/music.html
@@ -4,10 +4,10 @@
 <body>
 <script>
 var xhr = new XMLHttpRequest()
-xhr.open('GET', '/cate.json', true)
+xhr.open('GET', '/demos/cate.json', true)
 xhr.send()
-xhr.onload = function(data){
-  console.log(data)
+xhr.onload = function(){
+  console.log(JSON.parse(xhr.responseText))
   }
 </script>
 </body>
