--- a/music.html
+++ b/music.html
@@ -7,7 +7,7 @@ var xhr = new XMLHttpRequest()
 xhr.open('GET', '/demos/cate.json', true)
 xhr.send()
 xhr.onload = function(){
-  console.log(JSON.parse(xhr.responseText))
+  console.log(xhr.responseText)
   }
 </script>
 </body>
